force-app/main/default/objects/clofor_com_cfs__Inspection__c/clofor_com_cfs__Inspection__c.object-meta.xml
<CustomObject>
    <label>CNTR Inspection</label>
    <nameField>
        <displayFormat>IS-{000000}</displayFormat>
        <label>Inspection</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CNTR Inspection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>