force-app/main/default/objects/clofor_com_cfs__Inspection__c/fields/clofor_com_cfs__CNTRInTransport__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CNTRInTransport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container in Transportation</label>
    <referenceTo>clofor_com_cfs__Container_Info__c</referenceTo>
    <relationshipLabel>INSPECTION</relationshipLabel>
    <relationshipName>Inspectin</relationshipName>
    <type>Lookup</type>
</CustomField>