force-app/main/default/objects/clofor_com_cfs__Inspection__c/fields/clofor_com_cfs__ContainerinWDY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerinWDY__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Container stored in Warehouse, Depot, Yard</inlineHelpText>
    <label>Container in W/D/Y</label>
    <referenceTo>clofor_com_cfs__CONTAINER__c</referenceTo>
    <relationshipLabel>INSPECTION</relationshipLabel>
    <relationshipName>Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>