force-app/main/default/objects/clofor_com_cfs__Inspection__c/fields/clofor_com_cfs__InsideOutsideDoors__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InsideOutsideDoors__c</fullName>
    <label>Inside/Outside Doors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__InspectionResultCategory</valueSetName>
    </valueSet>
</CustomField>