force-app/main/default/objects/clofor_com_cfs__Inspection__c/fields/clofor_com_cfs__InspectedBy__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InspectedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspected by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>