force-app/main/default/objects/clofor_com_cfs__Inspection__c/fields/clofor_com_cfs__Photo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Photo__c</fullName>
    <label>Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>