force-app/main/default/objects/clofor_com_cfs__Inspection__c/fields/clofor_com_cfs__PlanInspectionDateTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PlanInspectionDateTime__c</fullName>
    <label>Plan Inspection Date/Time</label>
    <type>DateTime</type>
</CustomField>