force-app/main/default/objects/clofor_com_cfs__Inspection__c/listViews/clofor_com_cfs__TodayToDo.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__TodayToDo</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__PlanInspectionDateTime__c</columns>
    <columns>clofor_com_cfs__InspectedBy__c</columns>
    <columns>clofor_com_cfs__CNTRInTransport__c</columns>
    <columns>clofor_com_cfs__ContainerinWDY__c</columns>
    <columns>clofor_com_cfs__OutsideUndercarriage__c</columns>
    <columns>clofor_com_cfs__InsideOutsideDoors__c</columns>
    <columns>clofor_com_cfs__RightSide__c</columns>
    <columns>clofor_com_cfs__LeftSide__c</columns>
    <columns>clofor_com_cfs__FrontWall__c</columns>
    <columns>clofor_com_cfs__CeilingRoof__c</columns>
    <columns>clofor_com_cfs__FloorInside__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__PlanInspectionDateTime__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>clofor_com_cfs__Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <label>Today(To-Do)</label>
</ListView>